<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_adobo1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.recipicks.recipicks.corngrit">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/NutrionalFacts"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textAlignment="center"
        android:background="@android:color/holo_green_light"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:background="@drawable/edit"
        android:onClick="editnutri"
        android:text="@string/edit"
        android:layout_marginBottom="26dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/calc"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_below="@+id/textView4"
        android:id="@+id/textView5"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/adoboListView2"
        android:layout_alignStart="@+id/textView4"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:text="@string/fc"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView4"
        android:id="@+id/textView6"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:text="@string/Fat"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:id="@+id/textView7"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:text="@string/avitamin"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/textView7"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:text="@string/foodN"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:id="@+id/textView4"
        android:layout_marginTop="14dp"
        android:layout_alignTop="@+id/adoboListView2"
        android:layout_alignStart="@+id/button2"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:text="@string/calories"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView9"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="7dp"
        android:layout_toEndOf="@+id/adoboListView2"
        android:layout_alignStart="@+id/textView9"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:text="@string/cvitamin"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:text="@string/iro"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:id="@+id/textView12"
        android:layout_marginTop="1dp"
        android:layout_below="@+id/textView11"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/textView10"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:text="@string/carbo"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:id="@+id/textView11"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textView10"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/textView10"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <ListView
        android:layout_width="150dp"
        android:layout_height="300dp"
        android:id="@+id/adoboListView2"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/fiber"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:id="@+id/textView14"
        android:layout_below="@+id/textView12"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_alignStart="@+id/textView12" />


</RelativeLayout>