<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.recipicks.recipicks.Tables.ProfileActivity">

    <Button
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:id="@+id/saveButton"
        android:onClick="save_click"
        android:background="@drawable/buttonshape2"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="133dp"
        android:id="@+id/editTextName"
        android:hint="@string/entername"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="24dp"
        android:id="@+id/editTextAge"
        android:hint="@string/age"
        android:layout_below="@+id/editTextName"
        android:layout_alignParentStart="true" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#f22d2d"/>

    <TextView
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvEmailProfile"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp" />

    <Button
        android:text="@string/proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/proceedButton"
        android:onClick="proceed_click"
        android:background="@drawable/buttonshape"
        android:layout_above="@+id/saveButton"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp" />

</RelativeLayout>
