<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.recipicks.recipicks.MainActivity"
    tools:ignore="RelativeOverlap"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#FFA000"/>

    <ImageView
        android:contentDescription="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back1"
        android:id="@+id/imageView3"
        android:layout_marginStart="24dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="bLogin_Click"
        android:id="@+id/bLogin"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshape"/>

    <Button
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="bRegistration_Click"
        android:labelFor="@+id/registration"
        android:id="@+id/bRegistration"
        android:elevation="0dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginTop="19dp"
        android:background="@drawable/buttonshape2"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
