<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.recipicks.recipicks.LoginActivity"
    tools:ignore="ContentDescription">

    <Button

        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bUserLogin"
        android:onClick="bUserLogin_Click"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:background="@drawable/buttonshape3"/>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#f22d2d"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/textPassLogin"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/password"
        android:layout_marginBottom="33dp"
        android:layout_above="@+id/bUserLogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/textEmailLogin"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/enteremail"
        android:layout_above="@+id/textPassLogin"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="18dp"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/back1"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textEmailLogin" />

</RelativeLayout>
